<resources>
  <string name="app_name">chata_ai</string>
	<string name="ask_me_anything">Ask me anything…</string>
	<string name="data_messenger">Data Messenger</string>

	<string name="msg_permission_record">We need access to your microphone to hear your query.</string>
	<string name="msg_not_speech">This device does not count an App with speech recognition.</string>
	<string name="msg_suggestion">I want to make sure I understood your query. Did you mean:</string>
	<string name="msg_full_suggestion">Before I can try to find your answer, I need your help understanding a term you used that I don\'t see in your data. Click the dropdown to view suggestions so I can ensure you get the right data!</string>
	<string name="run_query">Run Query</string>
	<string name="msg_run_autoql">We run on AutoQL by Chata</string>
	<string name="type_queries_here">" Type your queries here"</string>
	<string name="great_news_help">Great news, I can with that:</string>
	<string name="explore_queries_msg_1">Discover what you can ask by entering a topic in the search bar above.</string>
	<string name="explore_queries_msg_2">Simply click on any of the returned options to run the query in Data Messenger.</string>
	<string name="empty_data_explore_queries">Sorry, I couldn\'t find any queries matching your input. Try entering a different topic or keyword instead.</string>
	<string name="explore_queries_hint">Search relevant queries by topic</string>
	<string name="arrow_left">←</string>
	<string name="arrow_right">→</string>
	<string name="you_can_ask_me">Some things you can ask me:</string>
	<string name="the_data_is_incorrect">The data is incorrect</string>
	<string name="the_data_is_incomplete">The data is incomplete</string>
	<string name="other">Other…</string>
	<string name="filter_table">Filter table</string>
	<string name="report_problem">Report a problem</string>
	<string name="delete_response">Delete data response</string>
	<string name="view_generated_sql">View generated SQL</string>
	<string name="loading">Loading…</string>
	<string name="empty_notification">No notifications yet.</string>
	<string name="stay_tuned">Stay tuned!</string>
	<string name="generated_sql">Generated SQL</string>

	<string name="internal_service_error">Internal Service Error: Our system is experiencing an unexpected error. We\'re aware of this issue and are working to fix it as soon as possible.</string>
	<string name="it_looks_like">Uh oh.. It looks like you don\'t have access to this resource. Please double check that all required authentication fields are correct.</string>
	
	<string name="limit_row_num">The display limit of 500 rows has been reached. Try querying a smaller time-frame to ensure all your data is displayed.</string>
	<string name="try_again">Try Again</string>
	<string name="show_hide_column">Show/Hide Columns</string>
	<string name="cancel">Cancel</string>
	<string name="apply">Apply</string>
	<string name="visibility">Visibility</string>
	<string name="column_name">Column Name</string>
	<string name="discover_today">Hi %1$s! Let\'s dive into your data. What can I help you discover today?</string>
	<string name="tell_more_about">Please tell us more about the problem you are experiencing:</string>
	<string name="thank_you_feedback">Thank you for your feedback</string>
	<string name="copied_clipboard">Successfully copied generated query to clipboard!</string>
	<string name="untitled">Untitled</string>
	<string name="no_query_title">No query was supplied for this title</string>
	<string name="column_hidden">All columns in this table are currently hidden. You can adjust your column visibility preferences using the Column Visibility Manager (&#38;#128065) in the Options Toolbar.</string>
	<string name="errorId">Error ID:</string>
	<string name="not_recognized">display type not recognized</string>
	<string name="success">Success</string>
	<string name="msg_explore_queries">Use💡Explore Queries to further explore the possibilities.</string>
	<string name="ok">Ok</string>
</resources>
