<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<data>
		<variable
			name="model"
			type="chata.can.chata_ai.retrofit.ui.viewModel.NotificationViewModel" />
	</data>

	<RelativeLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent">

		<LinearLayout
			android:gravity="center_horizontal"
			android:id="@+id/llParent"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:paddingTop="260dp">

			<ImageView
				android:contentDescription="@null"
				android:id="@+id/iv1"
				android:layout_height="180dp"
				android:layout_width="180dp"
				android:src="@drawable/ic_notification"
				android:visibility="gone" />

			<TextView
				android:gravity="center"
				android:id="@+id/tvLoading"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/loading"
				android:textSize="14sp" />

			<Button
				android:id="@+id/btnTry"
				android:layout_height="wrap_content"
				android:layout_margin="16dp"
				android:layout_width="wrap_content"
				android:text="@string/try_again"
				android:textAllCaps="false"
				android:visibility="gone" />

			<TextView
				android:gravity="center"
				android:id="@+id/tvMsg1"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_width="match_parent"
				android:text="@string/stay_tuned"
				android:textSize="14sp"
				android:visibility="gone" />
		</LinearLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvNotification"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:visibility="gone" />
	</RelativeLayout>
</layout>