<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">

	<include layout="@layout/include_toolbar"/>

	<RelativeLayout
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		android:id="@+id/llQuery"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:padding="8dp">
		<ImageView
			android:contentDescription="@null"
			android:id="@+id/ivSearch"
			android:layout_alignParentEnd="true"
			android:layout_gravity="center"
			android:layout_height="40dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_width="40dp"
			android:src="@drawable/ic_search"
			android:scaleType="fitCenter"/>
		<EditText
			android:background="@null"
			android:hint="@string/explore_queries_hint"
			android:id="@+id/etQuery"
			android:inputType="text"
			android:layout_height="40dp"
			android:paddingBottom="8dp"
			android:paddingStart="16dp"
			android:paddingEnd="16dp"
			android:paddingTop="8dp"
			android:layout_toStartOf="@id/ivSearch"
			android:layout_width="match_parent"
			android:importantForAutofill="no"/>
	</RelativeLayout>

	<LinearLayout
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_width="match_parent"
		android:orientation="vertical">
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvRelatedQueries"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:visibility="gone"/>

		<RelativeLayout
			android:id="@+id/rlGif"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:visibility="gone">
			<chata.can.chata_ai.view.gif.GifView
				android:layout_centerInParent="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</RelativeLayout>

		<TextView
			android:gravity="center"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_width="match_parent"
			android:text="@string/explore_queries_msg_1"
			android:visibility="visible"/>

		<TextView
			android:gravity="center"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_width="match_parent"
			android:text="@string/explore_queries_msg_2"
			android:visibility="visible"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/llPager"
		android:layout_height="?attr/actionBarSize"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:visibility="gone">
		<TextView
			android:gravity="center"
			android:id="@+id/tvPrevious"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:textSize="32sp"
			android:textStyle="bold"
			android:text="@string/arrow_left"/>
		<!--region pages-->
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_width="0dp">
			<TextView
				android:layout_centerInParent="true"
				android:gravity="center"
				android:id="@+id/tvFirstPage"
				android:layout_height="30dp"
				android:layout_width="30dp"
				android:textSize="20sp"
				android:textStyle="bold"
				tools:text="1"/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_width="0dp">
			<TextView
				android:layout_centerInParent="true"
				android:gravity="center"
				android:id="@+id/tvCenterPage"
				android:layout_height="30dp"
				android:layout_width="30dp"
				android:textSize="20sp"
				android:textStyle="bold"
				tools:text="..."/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_width="0dp">
			<TextView
				android:layout_centerInParent="true"
				android:gravity="center"
				android:id="@+id/tvLastPage"
				android:layout_height="30dp"
				android:layout_width="30dp"
				android:textSize="20sp"
				android:textStyle="bold"
				tools:text="9"/>
		</RelativeLayout>
		<!--endregion pages-->
		<TextView
			android:gravity="center"
			android:id="@+id/tvNext"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:textSize="32sp"
			android:textStyle="bold"
			android:text="@string/arrow_right"/>
	</LinearLayout>
</LinearLayout>